Mapa para cerro manquehue

--- a/src/views/parques.ejs
+++ b/src/views/parques.ejs
@@ -1,5 +1,6 @@
 <%- layout('layouts/main')  %> 
-  
+
+<!-- Modal de mapas -->
 <div class="modal fade" id="mapaModal" tabindex="-1" aria-labelledby="mapaModalLabel" aria-hidden="true">
   <div class="modal-dialog modal-fullscreen">
       <div class="modal-content">
@@ -8,13 +9,14 @@
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Cerrar">
               </button>
           </div>
-          <div class="modal-body">
-              <img src="images/parques/1/map.jpg" class="img-fluid" alt="Sin imagen:" />
+          <div class="modal-body text-center">
+              <img src="" class="img-fluid" alt="Sin imagen mapa" />
           </div>
       </div>
   </div>
 </div>
 
+<!-- Titulo vista-->
 <h3 class="display-5 text-center my-4 text-uppercase">Parques</h3>
 
 <!-- Filtros -->
