acortar descripcion torres

--- a/src/views/mantenedor/agregar.ejs
+++ b/src/views/mantenedor/agregar.ejs
@@ -74,6 +74,11 @@
     </div>
 
     <div>
+      <label for="subirImagenes" class="form-label">Subir imágenes <i>(deshabilitado)</i></label>
+      <input class="form-control" type="file" id="subirMapa" multiple disabled>
+    </div>
+
+    <div>
       <label for="subirMapa" class="form-label">Subir mapa <i>(deshabilitado)</i></label>
       <input class="form-control" type="file" id="subirMapa" disabled>
     </div>
