abrir sitio conaf en nueva pestana

--- a/src/views/about.ejs
+++ b/src/views/about.ejs
@@ -27,7 +27,7 @@
           <h6 class="card-subtitle mb-2 text-muted">Conaf</h6>
           <p class="card-text">Conaf se rige por el Ministerio nacional de agricultura y se
               encarga de gestionar los parques nacionales a lo largo del país.</p>
-          <a href="https://www.conaf.cl" class="card-link">Página web de Conaf</a>
+          <a href="https://www.conaf.cl" target="_blank" class="card-link">Página web de Conaf</a>
         </div>
     </div>
 </div>
