--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -60,8 +60,8 @@
     </div>
 
     <!-- Footer -->
-    <footer>
-        <div class="container p-4 bg-secondary text-center text-lg-start">
+    <footer class="bg-secondary">
+        <div class="container p-4 bg-secondary text-center text-lg-start wx">
         <div class="row">
             <!-- Columna 1 -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
