--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -41,13 +41,16 @@
             <div class="collapse navbar-collapse justify-content-end align-center" id="mainNav">
               <ul class="navbar-nav mb-2 mb-lg-0">
                 <li class="nav-item">
+                  <a class="nav-link <%= (title === 'Inicio')?'active':'' %> " aria-current="page" href="/">Inicio</a>
+                </li>
+                <li class="nav-item">
                   <a class="nav-link <%= (title === 'Parques')?'active':'' %> " aria-current="page" href="/parques">Parques</a>
                 </li>
                 <li class="nav-item">
-                  <a class="nav-link <%= (title === 'About')?'active':'' %> " aria-current="page" href="/about">Sobre nosotros</a>
+                  <a class="nav-link <%= (title === 'About')?'active':'' %> " aria-current="page" href="/about">Contacto</a>
                 </li>
-                <li class="nav-item">
-                  <a class="nav-link <%= (title === 'Ayuda')?'active':'' %> " aria-current="page" href="/help">Centro de ayuda</a>
+                <li class="nav-item button">
+                  <a class="btn btn-dark  nav-link" aria-current="page" href="#">Dar ubicación</a>
                 </li>
               </ul>
             </div>
@@ -72,7 +75,7 @@
                 <a href="/login" class="text-dark">Empleados</a>
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Afiliados</a>
+                <a href="/login" class="text-dark">Afiliados</a>
                 </li>
             </ul>
             </div>
@@ -83,11 +86,15 @@
     
             <ul class="list-unstyled">
                 <li>
-                <a href="#!" class="text-dark">Link 1</a>
+                <a href="/parques" class="text-dark">Ver Parques</a>
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Link 2</a>
+                  <a href="#!" class="text-dark">Dar ubicación</a>
                 </li>
+                <li>
+                  <a href="/" class="text-dark">Parques recomendados</a>
+                </li>
+
             </ul>
             </div>
     
@@ -107,17 +114,14 @@
     
             <!-- Columna 4 -->
             <div class="col-lg-3 col-md-6 mb-4 mb-md-0">
-            <h5 class="text-uppercase text-dark">Nosotros</h5>
+            <h5 class="text-uppercase text-dark">Todo Rutas</h5>
     
             <ul class="list-unstyled">
                 <li>
-                <a href="#!" class="text-dark">Nuestro equipo</a>
+                  <a href="/about" class="text-dark">Contacto</a>
                 </li>
                 <li>
-                <a href="#!" class="text-dark">Contacto</a>
-                </li>
-                <li>
-                <a href="#!" class="text-dark">Centro de ayuda</a>
+                  <a href="/about" class="text-dark">Afiliados</a>
                 </li>
             </ul>
             </div>
