--- a/src/views/layouts/main.ejs
+++ b/src/views/layouts/main.ejs
@@ -10,7 +10,7 @@
         <link href="https://fonts.googleapis.com/css2?family=Nunito:ital,wght@0,200;0,400;0,600;0,800;1,200;1,400;1,600;1,800&display=swap" rel="stylesheet">
 
     <!-- Sass en directorio estatico de express "public" -->
-        <link rel="stylesheet" href="../../sass/custom.css">
+        <link rel="stylesheet" href="../../../sass/custom.css">
     
         <!-- CDN  -->
         <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> -->
