--- a/src/views/empleados/login.ejs
+++ b/src/views/empleados/login.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/main')  %> 
 
 <!-- Login -->
-<form action="/mantenedor" method="get">
+<form action="/empleados" method="get">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
