--- a/src/views/parque/listar.ejs
+++ b/src/views/parque/listar.ejs
@@ -41,10 +41,10 @@
                     <td><%=item.horario%></td>
                     <td><%=item.pagina_web%></td>
                     <td><%=item.url_reserva%></td>
-                    <td><a href="/empleados/editar/<%=item.cod_parque%>" class="btn btn-success m-1 py-1 px-2">
+                    <td><a href="/parque/editar/<%=item.cod_parque%>" class="btn btn-success m-1 py-1 px-2">
                         <i class="fa fa-pencil" aria-hidden="true"></i> </a> 
                     </td>
-                    <td><a href="/empleados/eliminar/<%=item.cod_parque%>" class="btn btn-danger m-1 py-1 px-2">
+                    <td><a href="/parque/eliminar/<%=item.cod_parque%>" class="btn btn-danger m-1 py-1 px-2">
                         <i class="fa fa-pencil" aria-hidden="true"></i> </a> 
                     </td>
 
