--- a/src/views/parque/navTabs.ejs
+++ b/src/views/parque/navTabs.ejs
@@ -4,7 +4,7 @@
       <a
         class="nav-link <%= (title === 'Agregar Parque')?'active':'' %>"
         data-mdb-toggle="tab"
-        href="/empleados/agregar"
+        href="/parque/agregar"
         role="tab"
         aria-selected="<%= (title === 'Agregar Parque')?'true':'false' %>"
         >Agregar</a
@@ -14,7 +14,7 @@
       <a
         class="nav-link <%= (title === 'Lista Parques')?'active':'' %>"
         data-mdb-toggle="tab"
-        href="/empleados/listar"
+        href="/parque/listar"
         role="tab"
         aria-selected="<%= (title === 'Lista Parques')?'true':'false' %>"
         >Listar</a
