--- a/src/views/loginEmpleados.ejs
+++ b/src/views/loginEmpleados.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/main')  %> 
 
 <!-- Login -->
-<form action="/empleados" method="get">
+<form action="/parque" method="get">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -26,12 +26,6 @@
               <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Olvidó su contraseña?</a></p>
 
               <button class="btn btn-outline-light btn-lg px-5" type="submit">Iniciar Sesión</button>
-
-              <div class="d-flex justify-content-center text-center mt-4 pt-1">
-                <a href="#!" class="text-white"><i class="fab fa-facebook-f fa-lg"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-twitter fa-lg mx-4 px-2"></i></a>
-                <a href="#!" class="text-white"><i class="fab fa-google fa-lg"></i></a>
-              </div>
 
             </div>
 
