--- a/src/views/loginEmpleados.ejs
+++ b/src/views/loginEmpleados.ejs
@@ -1,7 +1,7 @@
 <%- layout('layouts/main')  %> 
 
 <!-- Login -->
-<form action="/parque" method="get">
+<form action="/loginEmpleados" method="POST">
   <div class="container h-100">
     <div class="row d-flex justify-content-center align-items-center h-100">
       <div class="col-12 col-md-8 col-lg-6 col-xl-5">
@@ -14,13 +14,13 @@
               <p class="text-white-50 mb-5">Ingrese su email y contraseña</p>
 
               <div class="form-outline form-white mb-4">
-                <input type="email" id="typeEmailX" class="form-control form-control-lg" />
-                <label class="form-label" for="typeEmailX">Email</label>
+                <input type="email" name="email" id="emlEmail" class="form-control form-control-lg" required/>
+                <label class="form-label" for="emlEmail">Email</label>
               </div>
 
               <div class="form-outline form-white mb-4">
-                <input type="password" id="typePasswordX" class="form-control form-control-lg" />
-                <label class="form-label" for="typePasswordX">Contraseña</label>
+                <input type="password" name="psw" id="passPsw" class="form-control form-control-lg" required/>
+                <label class="form-label" for="passPsw">Contraseña</label>
               </div>
 
               <p class="small mb-5 pb-lg-2"><a class="text-white-50" href="#!">¿Olvidó su contraseña?</a></p>
