--- a/src/views/parque/agregar.ejs
+++ b/src/views/parque/agregar.ejs
@@ -1,4 +1,4 @@
-<%- layout('layouts/empleado')  %> 
+<%- layout('layouts/main')  %> 
 
 <div class="row">
   <h1 class="display-4 text-center">Agregar Parque</h1>
