--- a/src/views/loginEmpleados.ejs
+++ b/src/views/loginEmpleados.ejs
@@ -11,7 +11,7 @@
             <div class="mb-md-5 mt-md-4 pb-5">
 
               <h2 class="fw-bold mb-2 text-uppercase">Login</h2>
-              <p class="text-white-50 mb-5">Ingrese su email y contraseña</p>
+              <p class="text-white-60 mb-5">Empleados de TodoRutas</p>
 
               <div class="form-outline form-white mb-4">
                 <input type="email" name="email" id="emlEmail" class="form-control form-control-lg" required/>
